# pico-localization

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  en_us.lang
example/src/: main.cpp
include/localization/: Localizer.h
src/localization/: Localizer.cpp
